// Proto file for movie info service. Note this is gRPC proto syntax (not Go)
syntax = "proto3";

option go_package = "gitlab.com/arunravindran/cloudnativecourse/lab5-grpc/movieapi";

package movieapi;

service MovieInfo {
	// Sends a requeest for movie info
	rpc GetMovieInfo (MovieRequest) returns (MovieReply) {}
	//send a request for adding a movie info to database
	rpc setMovieInfo (MovieData) returns (Status){}
}
	
// The request message containing movie name
message MovieRequest {
	string title = 1;
}

// The response message containining movie info
message MovieReply {
	int32 year = 1;
	string director = 2;
	repeated string cast = 3;
	
}

//The request message of setMovieInfo contains movie info
message MovieData{
	string title = 1;
	int32 year = 2;
	string director = 3;
	repeated string cast = 4;
}

//The response message of setMovieInfo contains an error message
message Status{
	string status = 1;
}

